# xprobe

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  PLAN.md  README.md  SECURITY.md  environment.yml  install.sh  justfile
.cursor/rules/: xprobe.mdc
.github/workflows/: ci.yml  hardware.yml  release.yml
benchmarks/cuda-aggregate/: cuda_aggregate_benchmark.cu  resource_runner.c  run-container.sh  run.py
benchmarks/cuda-callback/: cuda_benchmark.cu  run-container.sh  run.py
benchmarks/cuda-multiprocess/: cuda_multiprocess_worker.cu  run-container.pl  run.py
bpf/: CMakeLists.txt  xprobe.bpf.c
cupti/: CMakeLists.txt
cupti/include/xprobe/: cupti_agent.h
cupti/src/: cupti_agent.c
cupti/tests/: cuda_launch_fixture.cu  cuda_multisource_fixture.cu  cupti_smoke.c  nvtx_range_fixture.cpp
docs/: agent-integration.md  architecture.md  benchmarks.md  cli-contract.md  cupti-agent.md  development.md  installation.md
schemas/: aggregate-inventory-result.schema.json  capability.schema.json  discover.schema.json  error.schema.json  event.schema.json  host-capture.schema.json  inspect.schema.json  measurement-result.schema.json  measurement-spec.schema.json  resolve.schema.json  trace-export.schema.json  validate.schema.json
scripts/: check-glibc-ceiling.sh  package-release.sh
skills/xprobe-measure-latency/: SKILL.md
skills/xprobe-measure-latency/agents/: openai.yaml
skills/xprobe-measure-latency/examples/: coarse-kernel-inventory.json  coarse-memcpy-inventory.json  cuda-api-duration.json  host-function-span.json  kernel-duration.json  memcpy-duration.json  request-to-first-kernel.json  same-stream-kernel-gap.json  syscall-duration.json
skills/xprobe-measure-latency/references/: cli-contract.md  investigation.md  multi-process.md  result-quality.md  setup.md  trace-analysis.md
skills/xprobe-measure-latency/scripts/: analyze_trace.py
tests/: CMakeLists.txt
tests/agent-contract/: test_contract.py  test_multi_process_workflow.py  test_skill_install.sh  test_trace_analysis.py
tests/agent-contract/fixtures/: multi-process.json
tests/fixtures/: resolve_library.c  resolve_target.c  syscall_target.c  uprobe_target.c
tests/install/: test_glibc_ceiling.sh  test_install.sh
tests/integration/: run-cupti-live.sh  run-inject-live.sh  run-linux-live.sh  run-multisource-live.sh  run-nvtx-live.sh  run-uprobe-live.sh  test_cuda12_compat.py  test_cupti.py  test_inject.py  test_linux.py  test_multisource.py  test_nvtx.py  test_pytorch.py  test_pytorch_cuda.py  test_pytorch_symbols.py  test_uprobe.py
xprobe/cli/: Cargo.toml
xprobe/cli/src/: main.rs
xprobe/cli/tests/: cupti.rs  discover.rs  doctor.rs  export.rs  inspect.rs  measure.rs  resolve.rs  trace.rs  uprobe.rs  validate.rs
xprobe/collector/: Cargo.toml  build.rs
xprobe/collector/src/: completed.rs  cupti.rs  lib.rs  linux.rs  uprobe.rs
xprobe/core/: Cargo.toml
xprobe/core/src/: cupti_compat.rs  discover.rs  doctor.rs  inject.rs  inspect.rs  lib.rs  resolve.rs  validate.rs
xprobe/correlator/: Cargo.toml
xprobe/correlator/src/: lib.rs
xprobe/daemon/: Cargo.toml
xprobe/daemon/src/: lib.rs
xprobe/exporter/: Cargo.toml
xprobe/exporter/src/: lib.rs
xprobe/protocol/: Cargo.toml
xprobe/protocol/src/: capability.rs  capture.rs  discover.rs  error.rs  event.rs  export.rs  lib.rs  measurement.rs  process.rs  resolve.rs  schema.rs  validate.rs  version.rs
xprobe/protocol/tests/: contracts.rs
