[package]
name = "xprobe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cpp_demangle.workspace = true
object.workspace = true
nix.workspace = true
regex.workspace = true
xprobe-protocol.workspace = true

[lints]
workspace = true
